fixed an issue with overflow

--- a/css/style-main.scss
+++ b/css/style-main.scss
@@ -5,17 +5,22 @@
 
   body {
     .container1 {
+      border: 0.5rem solid rgb(0, 0, 0);
       height: 100vh;
       width: 100vw;
       background-color: cadetblue;
       padding-top: 5rem;
 
       .todobody {
+        box-sizing: content-box;
+        border: 0.5rem solid rgb(0, 0, 0);
         width: 50rem;
         height: 50rem;
         background-color: brown;
         text-align: center;
         margin: auto;
+        overflow: auto;
+        overflow-x: hidden;
 
         .todoheader {
           height: 12.5rem;
@@ -31,29 +36,37 @@
             padding-top: 2.125rem;
           }
         }
-        #todo-input {
-          width: 25rem;
-          margin-left: 12.5rem;
-          padding: 1rem;
-          border: none;
-        }
-        #todo-submit {
-          background-color: cornflowerblue;
-          border: none;
-          display: block;
-          padding: 1rem;
-          float: right;
-          margin-right: 7.9rem;
+        .is {
+          margin-left: 12.3rem;
+          width: 30rem;
+
+          #todo-input {
+            width: 25rem;
+            padding: 1rem;
+            border: none;
+          }
+          #todo-submit {
+            background-color: cornflowerblue;
+            border: none;
+            display: inline;
+            padding: 1rem;
+            margin-left: -0.3rem;
+          }
         }
         ul {
-          border: 0.5rem solid black;
+          border-top: 0.2rem;
+          border-left: 0.2rem;
+          border-right: 0.2rem;
+          border-bottom: 0rem;
+          border-style: solid;
+          border-color: black;
           margin-top: 1rem;
           margin-left: 12.5rem;
           height: auto;
           width: 25rem;
-          padding: 0.5rem;
 
           li {
+            border-bottom: 0.2rem solid black;
             text-align: left;
             background-color: darkgray;
             list-style: none;
